# healthy_habits_tracker_DRF

./: .coverage  .coveragerc  .dockerignore  .env.sample  .flake8  Dockerfile  README.md  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
habits/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
habits/migrations/: 0001_initial.py  0002_rename_habits_habit.py  0003_remove_habit_periodicity_habit_periodicity_days_and_more.py  0004_habit_created_at.py  0005_alter_habit_created_at.py  0006_remove_habit_created_at.py
htmlcov/: index.html
nginx/: Dockerfile  nginx.conf
users/: admin.py  managers.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_alter_user_managers.py  0004_user_tg_chat_id.py
