[tool.poetry]
name = "healthy-habits-tracker-drf"
version = "0.1.0"
description = ""
authors = ["GeeMoowy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
djangorestframework-simplejwt = "^5.5.0"
celery = "^5.5.3"
eventlet = "^0.40.0"
redis = "^6.2.0"
django-celery-beat = "^2.8.1"
requests = "^2.32.4"
django-cors-headers = "^4.7.0"
drf-yasg = "^1.21.10"
gunicorn = "^21.2.0"
django-redis = "^5.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.3.0"
coverage = "^7.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
